@@ -61,21 +61,6 @@ Files: debian/modules/http-geoip2/*
 Copyright: 2014, Lee Valentine <lee@leev.net>
 License: BSD-2-clause
 
-Files: debian/modules/http-ndk/*
-Copyright: 2010-2018, Marcus Clyne
-License: BSD-3-clause
-
-Files: debian/modules/http-ndk/src/hash/md5.h
-       debian/modules/http-ndk/src/hash/sha.h
-Copyright: 1995-1998, Eric Young <eay@cryptsoft.com>
-License: BSD-4-clause
-
-Files: debian/modules/http-ndk/src/hash/murmurhash2.c
-Copyright: Austin Appleby
-License: public-domain
- All MurmurHash versions are public domain software, and the author
- disclaims all copyright to their code.
-
 Files: debian/modules/http-auth-pam/*
 Copyright: 2008-2020, Sergio Talens Oliag
 License: BSD-2-clause
@@ -88,24 +73,6 @@ Files: debian/modules/http-upstream-fair/*
 Copyright: 2007, Grzegorz Nosek
                  Igor Sysoev
 License: BSD-2-clause
-
-Files: debian/modules/nchan/*
-Copyright: 2009-2016, Leo Ponomarev (slact)
-           2014,      Wandenberg Peixoto
-                      Alexander Lyalin
-                      Rogério Carvalho Schneider <stockrt@gmail.com>
-License: Expat
-
-Files: debian/modules/nchan/src/store/redis/hiredis/*
-Copyright: 2006-2014, Salvatore Sanfilippo <antirez@gmail.com>
-           2010-2011, Pieter Noordhuis <pcnoordhuis@gmail.com>
-           2015,      Matt Stancliff <matt@genges.com>
-                      Jan-Erik Rediger <janerik.fnordig.com>
-License: BSD-3-clause
-
-Files: debian/modules/nchan/src/store/redis/cmp.*
-Copyright: 2017, Charles Gunyon
-License: Expat
 
 Files: debian/modules/http-uploadprogress/*
 Copyright: 2007, Brice Figureau
@@ -134,10 +101,6 @@ Copyright: 2009-2011, Taobao Inc., Alibaba Group
                       Antoine BONAVITA "<antoine.bonavita@gmail.com>"
                       agentzh (章亦春) "<agentzh@gmail.com>"
 License: BSD-3-clause
-
-Files: debian/modules/rtmp/*
-Copyright: 2012-2014, Roman Arutyunyan
-License: BSD-2-clause
 
 License: BSD-2-clause
  All rights reserved.
@@ -190,31 +153,6 @@ License: BSD-3-clause
  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-License: BSD-4-clause
- Redistribution and use in source and binary forms, with or without
- modification, are permitted provided that the following conditions
- are met:
- 1. Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
- 2. Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in the
-    documentation and/or other materials provided with the distribution.
- 4. Neither the name of the University nor the names of its contributors
-    may be used to endorse or promote products derived from this software
-    without specific prior written permission.
- .
- THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
- ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
- ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
- FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
- DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
- OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
- HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
- LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
- OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
- SUCH DAMAGE.
 
 License: Expat
  Permission is hereby granted, free of charge, to any person obtaining a copy
