@@ -1,1 +1,0 @@
-load_module modules/ngx_http_lua_module.so;
