@@ -1,1 +1,0 @@
-load_module modules/ndk_http_module.so;
