@@ -1,1 +1,0 @@
-load_module modules/ngx_nchan_module.so;
