@@ -1,1 +1,0 @@
-load_module modules/ngx_rtmp_module.so;
